test/test_wrong_argument_type_operation/test_wrong_argument_type_operation.out
error: Expected int but got float
 --> test/test_wrong_argument_type_operation/test_wrong_argument_type_operation.mvs:4:1
  |
4 | a(5.0 + 3.2);
  | ^
  |
hint: Try changing the argument type.
