test/test_wrong_argument_type_operation/test_wrong_argument_type_operation.mvs
func a(b: int) bool {
	return true;
}
a(5.0 + 3.2);
